--- a/assignments/assignment4/index.html
+++ b/assignments/assignment4/index.html
@@ -563,11 +563,11 @@
     <script src="js/owl.carousel.js"></script>
     <script src="js/wow.min.js"></script>
     <script type="text/javascript">
+      //wow
       new WOW().init();
 
-      $(document).ready(function(){
-        $(".owl-carousel").owlCarousel();
-      });
+      //alert for welcome (JS assignment)
+      alert("Hi, Welcome To Eyeshape Agency");
     </script>
   </body>
 </html>
