Added stopWatch Assignment

--- a/assignments/assignment7/index.html
+++ b/assignments/assignment7/index.html
@@ -6,8 +6,12 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../../css/goback.css">
 </head>
 <body>
+    <div class="goback">
+        <a href="../../index.html">Go To Home</a>
+    </div>
     <div class="main mx-auto bg-light my-5 rounded">
             <table class="table table-borderless table-responsive-sm m-0">
             <tr>
