--- a/index.html
+++ b/index.html
@@ -21,18 +21,55 @@
         <div class="row my-2">
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="custom-card">
-                    <h1 class="number"><span>6</span></h1>
+                    <h1 class="number"><span>8</span></h1>
+                    <h2 class="title">Stop Watch</h2>
+                    <p>
+                        Assign Date: 05 July 2020<br>Deadline: 11 July 2020 - 11:59 PM
+                        <br><span class="badge badge-dark p-2 mt-1">Type: Assigment</span>
+                    </p>
+                    <div class="button"><a href="assignments/assignment8/index.html">Explore</a></div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="custom-card">
+                    <h1 class="number"><span>7</span></h1>
                     <h2 class="title">Calculator</h2>
                     <p>
                         Assign Date: 21 June 2020<br>Deadline: 27 June 2020 - 11:59 PM
                         <br><span class="badge badge-dark p-2 mt-1">Type: Assigment</span>
                     </p>
-                    <div class="button"><a href="assignments/calculator/index.html">Explore</a></div>
+                    <div class="button"><a href="assignments/assignment7/index.html">Explore</a></div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="custom-card">
+                    <h1 class="number"><span>6</span></h1>
+                    <h2 class="title">JS Chapters 21-38</h2>
+                    <p>
+                        Assign Date: 14 June 2020<br>Deadline: 21 June 2020 - 05:00 PM
+                        <br><span class="badge badge-dark p-2 mt-1">Type: Assigment</span>
+                    </p>
+                    <div class="button"><a href="https://github.com/Hasnain-Shafeeq/JSassignment/tree/master/21-38" target="_blank">Explore</a></div>
+                </div>
+            </div>
+        </div>
+        
+        
+        <div class="row my-2">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="custom-card">
                     <h1 class="number"><span>5</span></h1>
+                    <h2 class="title">JS Chapters 01-20</h2>
+                    <p>
+                        Assign Date: 31 April 2020<br>Deadline: 14 June 2020 - 08:00 PM
+                        <br><span class="badge badge-dark p-2 mt-1">Type: Assigment</span>
+                    </p>
+                    <div class="button"><a href="https://github.com/Hasnain-Shafeeq/JSassignment/tree/master/1-20" target="_blank">Explore</a></div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="custom-card">
+                    <h1 class="number"><span>4</span></h1>
                     <h2 class="title">Eyeshape Agency</h2>
                     <p>
                         Assign Date: 11 May 2020<br>Deadline: 30 May 2020 - 11:59 PM
@@ -43,7 +80,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="custom-card">
-                    <h1 class="number"><span>4</span></h1>
+                    <h1 class="number"><span>P<sub>1</sub></span></h1>
                     <h2 class="title">Ludo Board</h2>
                     <p>
                         I've made this Ludo Board<br>without using an image. 
