--- a/assignments/assignment3/index.html
+++ b/assignments/assignment3/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -16,6 +15,9 @@
 
 <body>
     <div id="totop"></div>
+    <a href="../../index.html" class="badge bg-saylani-secondary text-light text-wrap p-2 position-fixed" style="width: 4rem; bottom: 10px; left: 10px; z-index: 9999;">
+        Go to Home Page
+      </a>
 
     <div class="topbar text-light bg-saylani-primary text-center">
         <div class="container">
@@ -237,7 +239,7 @@
         </div>
     </div>
 
-    <div class="counters bg-saylani-primary py-5 text-light text-center">
+    <div class="counters bg-saylani-primary py-5 text-light text-center parallax>
         <div class="container pt-4 pb-2">
             <div class="row wow fadeInUp">
                 <div class="col-md-3">
@@ -446,7 +448,7 @@
                         <a href="https://facebook.com/hasnain.shafeeq.50/" class="px-1" title="Facebook" target="_blank"><i class="fa fa-facebook px-2"></i></a>
                         <a href="https://github.com/Hasnain-Shafeeq/" class="px-1" title="Github" target="_blank"><i class="fa fa-github px-2"></i></a>
                         <a href="mailto:hasnainshafeeq1997@gmail.com" class="px-1" title="Email"><i class="fa fa-envelope-o px-2"></i></a>
-                        <a href="https://hasnain-wm12979.web.app/" class="px-1" title="Portfolio"><i class="fa fa-briefcase px-2"></i></a>
+                        <a href="../../index.html" class="px-1" title="Portfolio"><i class="fa fa-briefcase px-2"></i></a>
                     </div>
                 </div>
             </div>
